# ghoulies-cutscene-previewer

./: .gitignore  Cargo.toml  index.html  wrangler.toml
.github/workflows/: rust.yml
assets/: styles.css
src/: main.rs
